tdf#96250 desktop: empty str is the same as 0 str in jsonToPropertyValues()

Change-Id: I77306dc998afc53bb1d5710a8d1ae68717f945d1